--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "^19.2.1",
     "lucide-react": "^0.556.0",
     "react-dom": "^19.2.1",
-    "@google/genai": "^1.32.0"
+    "@google/genai": "^1.32.0",
+    "@vercel/node": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
