--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "pages:dev": "wrangler pages dev dist --compatibility-date=2024-01-01",
+    "pages:deploy": "npm run build && wrangler pages deploy dist"
   },
   "dependencies": {
-    "react": "^19.2.1",
-    "lucide-react": "^0.556.0",
-    "react-dom": "^19.2.1",
     "@google/genai": "^1.32.0",
-    "@vercel/node": "^3.0.0"
+    "lucide-react": "^0.556.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
+    "wrangler": "^4.53.0"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20240222.0",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
