--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,8 @@
+# Cloudflare Pages configuration
+# Note: Pages auto-deploys from dist/ and functions/
+# Environment variables should be set in Cloudflare Dashboard
+
 name = "clash"
 compatibility_date = "2024-01-01"
-
-[env.production]
-vars = { GEMINI_API_KEY = "" }
+pages_build_output_dir = "dist"
 
